tests/negative/parser/undefined.orng
// 343

fn main() -> Int {
    let x = undefined
    x = 343
    x
}